tests/ui/feature-gates/feature-gate-trait-alias.rs
trait Foo = Default;
//~^ ERROR trait aliases are experimental

fn main() {}
